# pyimproc

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00-core-operations.ipynb  01-convolutions.ipynb  03-webcam-input.ipynb
src/pyimproc/: analysis.py  geometry.py
src/scripts/: download_data.sh
