[project]
name = "pyimproc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"